# challenge_ey_2024

./: .gitignore  .pre-commit-config.yaml  README  README.md  project_setup.py  pyproject.toml
data/: links.yaml
