[tool.poetry]
package-mode = false
name = "challenge-ey-2024"
version = "0.1.0"
description = ""
authors = ["V. Dang", "P-L. Nohet", "G. Tran"]
license = "GPL-3.0-or-later"
readme = "README"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.2"
ultralytics = "^8.1.18"
opencv-python-headless = "^4.9.0.80"
labelme2yolo = "^0.1.4"
rasterio = "^1.3.9"
gdal = "3.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "*"
requests = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
